Forgot to Save the Solution Changes

--- a/ConnectTheDots.Web/ConnectTheDots.Web.csproj
+++ b/ConnectTheDots.Web/ConnectTheDots.Web.csproj
@@ -97,13 +97,17 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="index.cshtml" />
     <Content Include="index.html" />
+    <Content Include="init.js" />
     <Content Include="packages.config" />
     <None Include="Scripts\jquery-1.6.4-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.4.js" />
     <Content Include="Scripts\jquery-1.6.4.min.js" />
     <Content Include="Scripts\jquery.signalR-2.1.1.js" />
     <Content Include="Scripts\jquery.signalR-2.1.1.min.js" />
+    <Content Include="style.css" />
+    <Content Include="ui.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
