Added SignalR for RTC
Had to move Hub class around because of local machine error... it doesnt happen when published to server

--- a/ConnectTheDots.Web/Web.config
+++ b/ConnectTheDots.Web/Web.config
@@ -4,6 +4,34 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <!--<add key="owin:AutomaticAppStartup" value="true" />-->
+    <add key="owin:appStartup" value="ConnectTheDots.Web.Startup" />
+  </appSettings>
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <clear />
+        <add name="X-Powered-By" value="Herb." />
+      </customHeaders>
+      <redirectHeaders>
+        <clear />
+      </redirectHeaders>
+    </httpProtocol>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="index.cshtml" />
+        <add value="index.html" />
+        <add value="index.htm" />
+        <add value="Default.cshtml" />
+        <add value="Default.htm" />
+        <add value="Default.asp" />
+        <add value="default.aspx" />
+        <add value="iisstart.htm" />
+      </files>
+    </defaultDocument>
+  </system.webServer>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
