--- a/ConnectTheDots.TestProject/ConnectTheDots.TestProject.csproj
+++ b/ConnectTheDots.TestProject/ConnectTheDots.TestProject.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ConnectTheDots.Web\ConnectTheDots.Web.csproj" />
+  </ItemGroup>
+
 </Project>
