--- a/ConnectTheDots.Web/ConnectTheDots.Web.csproj
+++ b/ConnectTheDots.Web/ConnectTheDots.Web.csproj
@@ -113,8 +113,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Code\Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="App_Code\SignalRHub.cs" />
+    <Compile Include="SignalRHub.cs" />
     <Compile Include="App_Code\Startup.cs" />
   </ItemGroup>
   <PropertyGroup>
